--- a/data-architect.html
+++ b/data-architect.html
@@ -96,7 +96,7 @@ Developer Central. Solutions. Retail ? Hospitality ? Acquirers ? Petro. Support.
 <p><span class="badge badge-light">Mumbai</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BmtechGroup/743999691966259-data-architect'>Bmtech group Data Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BmtechGroup/743999691966259-data-architect'>Bmtech group Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -106,7 +106,7 @@ Developer Central. Solutions. Retail ? Hospitality ? Acquirers ? Petro. Support.
 support the implementation of a customer data lake. You should be able to 
 effectively?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://klook.applytojob.com/apply/pCa6CpsqXK/Data-Architect-SZ'>Data Architect (SZ) - Klook - Career Page</a></h5> 
+<h5><a href='http://klook.applytojob.com/apply/pCa6CpsqXK/Data-Architect-SZ'>Data Architect (SZ) - Klook - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -120,7 +120,7 @@ effectively?...</p>
 traditional data warehouses & data lakes to streaming cloud & big data 
 applications?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/nortal/db80da35-e058-4205-acc0-aa41f73d767c'>Nortal - Data Architect</a></h5> 
+<h5><a href='https://jobs.lever.co/nortal/db80da35-e058-4205-acc0-aa41f73d767c'>Nortal - Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -145,7 +145,7 @@ created role, you will be responsible for building the foundation of our?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://4re.referrals.selectminds.com/jobs/data-architect-25164'>Data Architect - RELX Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/jobs/data-architect-25164'>Data Architect - RELX Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -200,7 +200,7 @@ best?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Lingoda/743999691800498-data-architecture-engineer-remote-preferred-'>Lingoda Data Architecture Engineer (Remote preferred) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Lingoda/743999691800498-data-architecture-engineer-remote-preferred-'>Lingoda Data Architecture Engineer (Remote preferred) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -242,7 +242,7 @@ database models; Documentation of functional requirements and system?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='http://latitudeinc.applytojob.com/apply/O3riO8DgfD/Data-Architect'>Data Architect - Latitude, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/O3riO8DgfD/Data-Architect'>Data Architect - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -284,7 +284,7 @@ class?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zgfarchitects.applytojob.com/apply/ocH1PyAbN4/Architectural-Data-Analyst'>Architectural Data Analyst - ZGF Architects - Career Page</a></h5> 
+<h5><a href='http://zgfarchitects.applytojob.com/apply/ocH1PyAbN4/Architectural-Data-Analyst'>Architectural Data Analyst - ZGF Architects - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -373,7 +373,7 @@ architecture for a diverse set of customers and industries. The ideal candidate?
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://luxasia.workable.com/j/632CCA36FA'>Luxasia - Jobs: Regional Data Solution Architect - Apply online</a></h5> 
+<h5><a href='https://luxasia.workable.com/j/632CCA36FA'>Luxasia - Jobs: Regional Data Solution Architect - Apply online</a></h5> 
 <p><span class="badge badge-light">Kuala Lumpur Malaysia</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
@@ -385,7 +385,7 @@ architecture for a diverse set of customers and industries. The ideal candidate?
 <p><span class="badge badge-light">Portland, Oregon, United States</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1518484?gh_src=58c0403c1'>Job Application for Database Architect at Wikimedia Foundation</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1518484?gh_src=58c0403c1'>Job Application for Database Architect at Wikimedia Foundation</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-02</p>
 <hr/>
