--- a/devops.html
+++ b/devops.html
@@ -68,7 +68,7 @@
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/stacksports/jobs/1787995'>Job Application for DevOps Engineer at Stack Sports  </a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/stacksports/jobs/1787995'>Job Application for DevOps Engineer at Stack Sports  </a></h5> 
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -115,7 +115,7 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4367688002'>Job Application for DevOps Engineer- Database Infrastructure at Wayfair</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wayfair/jobs/4367688002'>Job Application for DevOps Engineer- Database Infrastructure at Wayfair</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -165,7 +165,7 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oetkerdigital.join.com/jobs/264275-devops-engineer'>Job @ Oetker Digital (Berlin): DevOps Engineer | JOIN</a></h5> 
+<h5><a href='https://oetkerdigital.join.com/jobs/264275-devops-engineer'>Job @ Oetker Digital (Berlin): DevOps Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -181,11 +181,11 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/resultadosdigitais/jobs/4364094002'>Job Application for SRE / DevOps at Resultados Digitais</a></h5> 
+<h5><a href='https://boards.greenhouse.io/resultadosdigitais/jobs/4364094002'>Job Application for SRE / DevOps at Resultados Digitais</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/resultadosdigitais/jobs/4364107002'>Job Application for SRE / DevOps - Joinville/SC at Resultados Digitais</a></h5> 
+<h5><a href='https://boards.greenhouse.io/resultadosdigitais/jobs/4364107002'>Job Application for SRE / DevOps - Joinville/SC at Resultados Digitais</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -198,7 +198,7 @@ us your CV. Any questions before taking the next step? You can contact Dorian.</
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/nubank/jobs/1775993'>Job Application for Systems Engineer (SRE/DevOps) at Nubank</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nubank/jobs/1775993'>Job Application for Systems Engineer (SRE/DevOps) at Nubank</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... About Nubank. Nubank is the leading financial technology company in Latin 
 America. Its first product, launched in 2014, is a no-fee credit card that is fully?...</p>
@@ -219,7 +219,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/swiggy/09d28ee4-a28a-4645-8400-51f3cbdc1bff'>Swiggy - Devops Engineer II</a></h5> 
+<h5><a href='https://jobs.lever.co/swiggy/09d28ee4-a28a-4645-8400-51f3cbdc1bff'>Swiggy - Devops Engineer II</a></h5> 
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -332,7 +332,7 @@ published: 08.03.2019). Apply now or check the other available jobs.</p>
 Engineer in Z?rich (published: 19.07.2019). Apply now or check the other 
 available?...</p>
 <hr/>
-<h5><a href='https://viva.workable.com/j/D3BD40666D?viewed=true'>DevOps Engineer - Apply online - Viva Wallet - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://viva.workable.com/j/D3BD40666D?viewed=true'>DevOps Engineer - Apply online - Viva Wallet - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... As a DevOps Engineer your focus will be to collaborate with developer and 
 operations teams to maintain and evolve our platforms. More specifically, as a?...</p>
@@ -408,7 +408,7 @@ on the AWS platform, as well as crafting and implementing infrastructure as?...<
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/datacom.co.nz/326a7302-abb2-44cf-aeec-e88eb40931a9'>Datacom - DevOps Engineer ? Wellington</a></h5> 
+<h5><a href='https://jobs.lever.co/datacom.co.nz/326a7302-abb2-44cf-aeec-e88eb40931a9'>Datacom - DevOps Engineer ? Wellington</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -430,7 +430,7 @@ on the AWS platform, as well as crafting and implementing infrastructure as?...<
 <p><span class="badge badge-light">Ile de France</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://upfeat.recruitee.com/o/systems-administrator-devops-engineer'>
+<h5><a href='https://upfeat.recruitee.com/o/systems-administrator-devops-engineer'>
       Systems Administrator / DevOps Engineer - Upfeat Media Inc.
     </a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
@@ -440,7 +440,7 @@ on the AWS platform, as well as crafting and implementing infrastructure as?...<
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999692076316-system-engineer-devops'>Netcentric System Engineer - DevOps | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999692076316-system-engineer-devops'>Netcentric System Engineer - DevOps | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
